Updated minds isle, nsa and s&e

--- a/syncandecco.html
+++ b/syncandecco.html
@@ -62,7 +62,7 @@
                         <img src="/images/brazafraza.png" alt="Favicon" id="mainImage">
                     </div>
                 </h1>
-                <h3> Role: Designer, Producer <br>Engine: Custom C++ Engine</h3>
+                <h3> Role: Lead Designer & Producer <br>Engine: Custom C++ Engine</h3>
                 <p>
                     <br>Side by side, you and your robot sidekick must navigate through a treacherous corporate building to find the AI core, freeing the robots from the control of the AI hivemind.
 
@@ -70,6 +70,9 @@
                     Are you ready to face the other consequences?
                     <br>
                     In this couch co-op experience, work together to overcome enemies and avoid hazards. However you can’t face this task alone, it’s truly a duality of survival.
+
+                    <br>
+                    
 
 
                 </p>
