--- a/beeranged.html
+++ b/beeranged.html
@@ -88,7 +88,7 @@
 
                     <br />
                     <h3> Economic prototype</h3>
-                    This project was a test to see how I could have a manually changing numbers in a game along with numbers increasing over time and keeping this balanced. Initially, I planned to create a tower defence game with spawning enemies, money systems, and upgrades. However, I wanted a bigger challenge and decided to focus on dynamic scaling enemies. At the time, I had just started playing Vampire Survivors, which inspired me to create a similar prototype. The first version wasn’t a game at all—it was just an Excel sheet. I used it to experiment with player and enemy stats scaling over time and while it was useful, it didn’t feel satisfying. I made the decision to expand and moved on to building a real game.
+                    This project was a test to see how I could have manually changing numbers in a game (from the player), numbers increasing over time and trying to keep them both balanced. Initially, I planned to create a tower defence game with spawning enemies, money systems, and upgrades. However, I wanted a bigger challenge and decided to focus on dynamic scaling enemies. At the time, I had just started playing Vampire Survivors, which inspired me to create a similar prototype. The first version wasn’t a game at all—it was just an Excel sheet. I used it to experiment with player and enemy stats scaling over time and while it was useful, it didn’t feel satisfying. I made the decision to expand and moved on to building a real game.
                     <br>
                     Here are the graphs from the sheet:<br>
 
