--- a/beeranged.html
+++ b/beeranged.html
@@ -109,7 +109,7 @@
                     <br>
 
                     <br>  <h3> Learning C#</h3>
-                    This was one of the first solo projects I had undertaken, so a massive hurdle I had to eventually tackle was C#. I had done basics in C# but mostly bools and storing variables.  I knew I could’ve kept it simple, but I saw this as an opportunity to improve my programming skills.
+                    This was one of the first solo projects I had undertaken, so a massive hurdle I had to eventually tackle was C#. I had done basics in C# but mostly bools and storing variables. I knew I could’ve kept it simple, but I saw this as an opportunity to improve my programming skills.
                     <br>With the help of tutorials and resources like W3Schools, I spent a week improving my understanding of C#. I created:
                     <br> - A player movement script.
                     <br> - A stats script handling damage, speed, health, and firing speed.
@@ -123,7 +123,7 @@
                     <img src="images/Beeranged/gameplay.gif" alt="Gameplay" data-position="center center" style="width:1280px;height:720px;">
                     <br><i>Beeranged first prototype</i>
 
-                    <br> <br>  <h3> Learning Aesprite</h3>
+                    <br> <br>  <h3> Learning Aseprite</h3>
                     At the start of the project, all the enemies and objects (excluding a rough player drawing) were just the default unity shapes. I had little experience with game art and didn’t give it much thought during early development. A few months after I finished the project, inspired by childhood attempts at pixel art in MS Paint, I purchased Aseprite and started playing around with sprite art, leading to me making proper sprites for Beeranged.
 
 
@@ -159,15 +159,15 @@
                     </audio>
 
                     <br><br> <br>  <h2> Takeaways</h2>
-                    <h4> Spreadsheets</h4> Reflecting on my spreadsheet, I wish i did more on it, having scripts inside Excel that could’ve allowed me to automatically test more scenario. Hopefully, i’ll revisit it in the future one day for this project.
+                    <h4> Spreadsheets</h4> Reflecting on my spreadsheet, I wish I did more on it, having scripts inside Excel that could’ve allowed me to automatically test more scenarios. Hopefully, I’ll revisit it in the future one day for this project.
                     <br> <h4> Theme matters</h4> A unique overarching theme may be difficult to keep consistent however it adds character to a game.
                     <br> <h4> One door closing opens another</h4>Sometimes proposed changes don’t make it into the final version, but they can inspire new ideas and improvements.
-                    <br> <h4> C#</h4> C# is an extremely powerful language that I underestimated, and now I am setting aside more time every week to learning more of it. Being able to call functions from other scripts is such a huge game changer (literally), and there’s more simple things like this I still don’t know that i’m keen to discover.
-                    <br> <h4> Sprite work</h4> is a lot of fun and an easy way to whip up quick art, especially in a program like Aesprite. I learned that in general, in all new applications I use, I should delve into tutorials and research tools as they can do some incredible things that aren't obvious at first glance. I didn’t use any tutorials for Aesprite, however, I may have found what I was looking for quicker if I did
+                    <br> <h4> C#</h4> C# is an extremely powerful language that I underestimated, and now I am setting aside more time every week to learning more of it. Being able to call functions from other scripts is such a huge game changer (literally), and there’s more simple things like this I still don’t know that I’m keen to discover.
+                    <br> <h4> Sprite work</h4> It's a lot of fun and an easy way to whip up quick art, especially in a program like Aseprite. I learned that in general, in all new applications I use, I should delve into tutorials and research tools as they can do some incredible things that aren't obvious at first glance. I didn’t use any tutorials for Aseprite, however, I may have found what I was looking for quicker if I did.
                     <br> <h4> Less is more</h4> A simple small thing if done right can be used to make something great, for example, me discovering short drum patterns that can loop to create a dynamic soundtrack (I will be using this again for sure!)
-                    <br> <h4> Revisting a project</h4> Beeranged was a project I recently revisited, I’ve learned that revisiting something is a great way to gain a different perspective on things and can be incredibly inspiring. I plan on revisiting this game again in late 2024, and again in 2025, reinventing a new title based of Beeranged, having the same core gameplay with new and improved mechanics, visuals and programming.
 
-                    <br><br><br> Beeranged started as a simple experiment and grew into a full game. Revisiting it taught me the value of iteration, reflection and simplicity. I’m excited to see how this project evolves in the future and what new challenges and skills it will bring to me.
+
+                    <br><br><br> Beeranged was a project I recently revisited, I’ve learned that revisiting and reflecting on a project is a great way to gain a different perspective on things and can be incredibly inspiring. I plan on revisiting this game again in late 2024, and again in 2025, reinventing a new title based of Beeranged, having the same core gameplay with new and improved mechanics, visuals and programming. I'm excited to see how the game continues to evolveQ
 
                     <br /><br>Thanks for reading! If you want to download the game or see more of the game check out the itch page below :)
 
