Beeranged, Final Hour finished

--- a/finalhour.html
+++ b/finalhour.html
@@ -77,7 +77,7 @@
 
 
 
-                    <h3> Level</h3><br>
+                    <h3> Level</h3>
                     Approaching this project, I worked closely with the narrative designer asking heaps of questions regarding the game’s story and environmental context. After discussions and reading over the script three times, I created a list of restraints for keeping the level design focused and within the scope this level - super important since it was a 1-week jam.<br><br>
 
                     They are as follows:<br>
@@ -91,40 +91,41 @@
 
 
 
-                    <h3> Early Desgin & Challenges</h3><br>
-                    Inspired by spaceships and architecture in Star Wars, Cowboy Bebop and Rick and Morty. I aimed for a retro sci-fi aesthetic, while not being too overly futuristic.I really liked the semi-claustrophobic mechanical feel in some of their designs, especially in star wars ships, These are the first sketches created for the level design. <br><br>
-                    <img src="images/FinalHour/I1.jpg" alt="1" data-position="center center" style="width:913px;height:462px;"><br>
-                    <img src="images/FinalHour/I2.jpg" alt="2" data-position="center center" style="width:913px;height:462px;"><br>
-                    <img src="images/FinalHour/I3.jpg" alt="3" data-position="center center" style="width:913px;height:462px;"><br>
+                    <h3> Early Desgin & Challenges</h3>
+                    Inspired by spaceships and architecture in Star Wars, Cowboy Bebop and Rick and Morty. I aimed for a retro sci-fi aesthetic, while not being too overly futuristic.I really liked the semi-claustrophobic mechanical feel in some of their designs, especially in star wars ships, These are were some of my reference images used for my sketches. <br><br>
+                    <img src="images/FinalHour/I1.png" alt="1" data-position="center center" style="width:984px;height:396px;"><br>
+                    Ship Inspirtaions<br>
+                    <img src="images/FinalHour/I2.png" alt="2" data-position="center center" style="width:984px;height:396px;"><br>
+                    Inside Inspirations<br><br>
+
                     These are my early paper sketches.<br>
-                    <img src="images/FinalHour/S1.jpg" alt="1" data-position="center center" style="width:913px;height:462px;"><br>
-                    <img src="images/FinalHour/S2.jpg" alt="2" data-position="center center" style="width:913px;height:462px;"><br>
-                    <img src="images/FinalHour/S3.jpg" alt="3" data-position="center center" style="width:913px;height:462px;">
+                    <img src="images/FinalHour/Sketches.png" alt="1" data-position="center center" style="width:984px;height:396px;"><br>
+
                     <br>As this was a 1 week jam, I didn't have a lot of time for iteration so I tried to stick with one of my initial concepts. <br>
 
 
                     <br>I wanted a ship design that felt almost circular to give easy paths leading to the main area connecting all the rooms. This design met all my needs the most and was my favourite, so I jumped straight into engine and started building it and testing the scale.<br>
-
-                    <br>When I started building the level in Unity, I quickly realized that curved walls were difficult to work with using Unity’s primitives. Awkward geometry and alignment issues made the design non-viable, so I touched it up and made a digital draft in Photopea, covering the curved walls with straight ones in front of them. This was a valuable lesson in understanding how 2D designs translate into 3D space and a simple solution to an unforeseen issue.<br><br>
+                    <img src="images/FinalHour/S1.jpg" alt="1" data-position="center center" style="width:1057px;height:815px;"><br>
+                    <br>When I started building the level in Unity, I quickly realized that curved walls were difficult to work with using Unity’s primitives. Awkward geometry and alignment issues made the design non-viable, so I touched it up and made a digital draft in Photopea, covering the curved walls with straight ones in front of them. This was my first challenge in understanding how 2D designs translate into 3D space and a simple solution to unforeseen issue.<br><br>
 
                     This is the first rough digital draft created for the level design
-                    <img src="images/FinalHour/D1.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+                    <img src="images/FinalHour/D1.png" alt="Draft" data-position="center center" style="width:951px;height:864px;">
 
                     <br>After more communication with the narrative designer, they were happy with the design so I re-made it in higher quality, and got feedback from the rest of the team.<br>
 
 
 
                     <br>After even more reviews from the narrative designer and team, I refined the digital draft and started blocking out the playable areas in engine.<br>
-                    <img src="images/FinalHour/FD1.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-                    <img src="images/FinalHour/FD2.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+                    <img src="images/FinalHour/FD1.png" alt="Draft" data-position="center center" style="width: 1080px; height: 1080px;">
+                    <img src="images/FinalHour/FD2.png" alt="Draft" data-position="center center" style="width: 1080px; height: 1080px; ">
                     <br>I left it up to the narrative designer to place the items for each fetch quest and position for each NPC. <br>
 
                     <br>To save time and create a more lived-in feel, I used barricades and furniture to block off non-playable areas, making the ship feel bigger without overextending the level. I made the grey box by putting the level design above into engine on a large cube and building the area on top of it. This design was slightly altered after some more feedback from the team. I got back into the engine and made the final version with primitives, it looked like this: <br>
 
-                    <img src="images/FinalHour/D2.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+                    <img src="images/FinalHour/D2.png" alt="Draft" data-position="center center" style="width:599px;height:575px;">
                     <br>As you can see, there are some slight differences to the 2D design, but that’s expected when translating a 2D image to 3D. One recurring issue was trying to align walls perfectly without creating awkward collisions or gaps. I solved this by using cylinders to cover the edges where walls met. This trick worked beautifully and added a nice polish to the level.<br>
-                    <img src="images/FinalHour/Hallway.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
-                    <img src="images/FinalHour/D3.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
+                    <img src="images/FinalHour/Hallway.png" alt="Draft" data-position="center center" style="width:1137px;height:606px;">
+                    <img src="images/FinalHour/D3.png" alt="Draft" data-position="center center" style="width:799px;height:850px;">
                     <br>This is what the level looked like from above with the shader. You never see this angle but I thought it was fun to look at!<br><br>
 
 
@@ -147,7 +148,7 @@
                     <img src="images/FinalHour/SSS6.png" alt="Draft" data-position="center center" style="width:913px;height:462px;">
 
 
-                    <br>Screenshots of the level with the final shader, it looks so cool! <br>
+                    <br>Screenshots of the level with the final shader, it looks so cool! <br><br>
 
 
                     I spent four days on the level design, leaving three days for audio work and a final day for polishing both.<br><br>
@@ -165,6 +166,7 @@
 
 
                     </audio>
+                    Samson contacting via radio<br>
                     <audio controls>
 
 
@@ -172,6 +174,7 @@
 
 
                     </audio>
+                    Player collecting space beers from fridge<br>
                     <audio controls>
 
 
@@ -179,6 +182,7 @@
 
 
                     </audio>
+                    Incorrect keypad input<br>
                     <audio controls>
 
 
@@ -186,6 +190,7 @@
 
 
                     </audio>
+                    Player footstep <br>
                     <audio controls>
 
 
@@ -193,28 +198,30 @@
 
 
                     </audio>
+                    Escape pod failure to take off
 
                     <br><br>I found many other ways to create the low-bit-rate sounds using more complicated methods, however, due to the time constraint and the large number of audio assets I had to make, I found something that worked and I used it. With a combination of using the ring modulator, amplifying sounds, changing the speed and changing the pitch, the audio files for Final Hour were born.<br><br><br>
 
 
                     <h2> Takeaways</h2>
 
-                    <br> <h4> Simplicity is key</h4> The two-color constraint meant we didn’t need complex textures, allowing me to use Unity primitives for props and keep the grey box as the final level. This was a huge time-saver and something I’ll carry into future projects. I want to re-iterate that I did NOT make most of the props, it was minimal however this was a cool thing I learnt that I will apply in future projects. <br>
-                    <br> <h4> Cylinders are OP</h4> Using cylinders to cover awkward geometry where walls met was a real life saver, this is pretty situational but i’ll remember it for future projects.<br>
+                    <h4> Simplicity is key</h4> The two-color constraint meant we didn’t need complex textures, allowing me to use Unity primitives for props and keep the grey box as the final level. This was a huge time-saver and something I’ll carry into future projects. I want to re-iterate that I did NOT make most of the props, it was minimal however this was a cool thing I learnt that I will apply in future projects. <br>
+                    <br> <h4> Translating a 2D Map to 3D</h4> Using cylinders to cover awkward geometry where walls met was a real life saver, this is pretty situational but i’ll remember it for future projects. It also introduced me to challenges faced when translating a 2D image to a 3D one. In order to save time, sometimes you need to cut corners (literally).<br>
                     <br> <h4> Audacity plug-ins</h4> Learning to use plugins like a ring modulator have given me a new toolset for creating low-bit rate style crunchy audio. I now also know how to install and find more awesome plugins.<br>
                     <br> <h4> Scoping in a jam</h4> You don’t have a lot of time for planning so sometimes you’ve gotta just get in there and make something. Knowing when to stop iterating and committing to a design is crucial, especially in such a short time frame. <br>
                     <br> <h4> Teamwork Rocks</h4> Having a decently sized team meant we could split the workload effectively. This was my first game jam, and collaborating under pressure was both challenging and incredibly rewarding.<br><br>
 
-                    Overall, im thrilled looking at what I started with this and what it evolved to within a week, I was extremely shocked and pleased with my work. Of course, the majority is the result of the whole teams hard work This was my first game jam and my first time working on a game under these pressured conditions and it was a blast! I picked up a lot of small tricks and design strategies in this project and I’m very keen to use them in future projects and jams.  <br><br>
+                    <br>  Overall, im thrilled looking at what I started with this and what it evolved to within a week, I was extremely shocked and pleased with my work. Of course, the majority is the result of the whole teams hard work This was my first game jam and my first time working on a game under these pressured conditions and it was a blast! I picked up a lot of small tricks and design strategies in this project and I’m very keen to use them in future projects and jams.  <br><br>
 
                     <h3>Credits:</h3>
                     Brodie Frazier (Me), Level and Sound Designer<br>
-                    Tom Evangelou, Programmer<br>
-                    Kaine Solace, Environmental Artist<br>
-                    Pheonix Marsh, Character Modeller, Technical Artist<br>
-                    Ben Hunter, 2D Character and UI Designer<br>
-                    Blake Andrews, Narrative Designer<br>
-                    John Sharp, Music <br><br>
+                    <a href="https://tomnce.dev">Tom Evangelou</a>, Programmer<br>
+                    <a href="https://sites.google.com/view/blakeandrewsportfolio">Blake Andrews</a>, Narrative Designer<br>
+                    <a href="https://phoenix_marsh.artstation.com"> Pheonix Marsh</a>, Character Modeller, Technical Artist<br>
+                    <a href="https://skeleben.itch.io"> Ben Hunter</a>, 2D Character and UI Designer<br>
+                    <a href="https://www.artstation.com/kaine_gejjo">Kaine Gejjo</a>, Environmental Artist<br>
+                    <a href="https://www.instagram.com/jjohnsharpp/?hl=en">John Sharp</a>, Music<br><br>
+                   
 
                     Thanks for reading! If you want to download the game or see more of the game check out the itch page below :)<br /><br />
 
