No strings attached - Finished

--- a/syncandecco.html
+++ b/syncandecco.html
@@ -72,8 +72,20 @@
                     In this couch co-op experience, work together to overcome enemies and avoid hazards. However you can’t face this task alone, it’s truly a duality of survival.
 
                     <br>
-                    
 
+                    <h3>Credits:</h3>
+                    Brodie Frazier (Me), Lead Designer and Producer  <br />
+                    <a href="https://kian-kelly.itch.io">Kian Kelly</a>, Gameplay and Level Designer<br>
+                    <a href="https://slime-enjoyer.itch.io">Austin Lanyon</a>, QA & Bugtesting<br>
+                    <a href="https://locstock.dev"> Lochlan McDonald</a>, Programmer<br>
+                    <a href="https://tombeeeeeeeeeee.github.io"> Thomas O'Brien</a>, Programmer<br>
+                    <a href="https://sketchfab.com/rach.mwa">Rachel Missingham</a>, Artist<br>
+                    <a href="">Hachi Dinh</a>, Artist<br>
+                    <a href="https://www.artstation.com/laurenct">Lauren Trinh</a>, Artist<br>
+                  
+
+
+                    Thanks for reading! If you want to download the game or see more of the game check out the itch page below :)
 
                 </p>
                 <ul class="actions">
