--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<img src="/images/brazafraza.png" alt="Favicon" id="mainImage">
 					</div>
 				</h1>
-				<p>Hey there! My name is Brodie Frazier, I'm an indie game developer. <br> <br> I'm currently studying game design and production at at AIE in Melbourne, focusing on building my portfolio and expanding my skill set. I have a versatile background with having done work on design, sound, programming and a little bit of art.<br /> This website is still under construction, but I'm working on some exciting projects! Check them out on my <a href="https://brodie-frazier.itch.io">itch.io page!</a></p>
+				<p>Hey there! My name is Brodie Frazier, I'm an indie game developer. <br> <br> I'm currently studying game design and production at at AIE in Melbourne, focusing on building my portfolio and expanding my skill set. I have a versatile background with having done work on design, sound, programming and a little bit of art.<br /> I'm working on some exciting projects! Check them out below where I share the development journey for each game and you can find the download links.</p>
 
 			</div>
 		</section>
